crates/math-core/tests/snapshots/wiki_test__wiki071.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\bigcirc, \\triangle, \\bigtriangleup, \\bigtriangledown"
---
<math>
    <mi>◯</mi>
    <mo>,</mo>
    <mi>△</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0">△</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">▽</mo>
</math>
