crates/math-core/tests/snapshots/wiki_test__wiki072.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\vartriangle, \\triangledown"
---
<math>
    <mo lspace="0" rspace="0">△</mo>
    <mo>,</mo>
    <mi>▽</mi>
</math>
