crates/math-core/tests/snapshots/wiki_test__wiki073.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\blacktriangle, \\blacktriangledown, \\blacktriangleleft, \\blacktriangleright"
---
<math>
    <mi>▲</mi>
    <mo>,</mo>
    <mi>▼</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0">◀</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">▶</mo>
</math>
