crates/math-core/tests/snapshots/wiki_test__wiki076.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\land \\wedge, \\curlywedge, \\bigwedge"
---
<math>
    <mo lspace="0" rspace="0">∧</mo>
    <mo lspace="0" rspace="0">∧</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋏</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋀</mo>
</math>
