crates/math-core/tests/snapshots/wiki_test__wiki080.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\ulcorner \\urcorner \\llcorner \\lrcorner"
---
<math>
    <mi>⌜</mi>
    <mi>⌝</mi>
    <mi>⌞</mi>
    <mi>⌟</mi>
</math>
