crates/math-core/tests/snapshots/wiki_test__wiki081.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\ulcorner \\urcorner \\llcorner \\lrcorner"
---
<math>
    <mo form="prefix">⌜</mo>
    <mo form="postfix">⌝</mo>
    <mo form="prefix">⌞</mo>
    <mo form="postfix">⌟</mo>
</math>
