crates/math-core/tests/snapshots/wiki_test__wiki082.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\Rrightarrow, \\Lleftarrow"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">⇛</mo>
    <mo>,</mo>
    <mo stretchy="false" lspace="0" rspace="0">⇚</mo>
</math>
